<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/azure"
        android:gravity="center_horizontal"
        android:orientation="vertical"
>
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="15dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <!--<TextView-->
                    <!--android:id="@+id/item_subject_name_tv"-->
                    <!--android:text="subject"-->
                    <!--android:textSize="30sp"-->
                    <!--android:gravity="center_horizontal"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"/>-->
            <TextView
                    android:id="@+id/item_question_et"
                    android:layout_width="match_parent"
                    android:hint="@string/question_item_tv"
                    android:layout_height="135dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_horizontal"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/item_optionA_et"
                        android:layout_weight="1"
                        android:hint="@string/option_a_item_tv"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/item_optionB_et"
                        android:layout_weight="1"
                        android:hint="@string/option_b_item_tv"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

            >
                <TextView
                        android:id="@+id/item_optionC_et"
                        android:layout_weight="1"
                        android:hint="@string/option_c_item_tv"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"/>
                <TextView
                        android:id="@+id/item_optionD_et"
                        android:layout_weight="1"
                        android:hint="@string/option_d_item_tv"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

            >
                <TextView
                        android:id="@+id/item_correct_option_et"
                        android:layout_weight="1"
                        android:background="@drawable/edit_text_style"
                        android:textSize="20sp"
                        android:hint="@string/correct_option_item_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <Button
                        android:id="@+id/item_changeQuestion_btn"
                        android:layout_weight="1"
                        android:background="@drawable/button_style"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/change_question_item_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>