<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/azure"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".startPage.authentication_page.AuthenticationActivity">
    <android.support.v7.widget.CardView
            android:layout_margin="30dp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:cardCornerRadius="20dp">
        <LinearLayout android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:orientation="vertical"
                      android:layout_gravity="center"
        >

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="@string/action_sign_in_short"
                      android:textSize="30sp"
                      android:textStyle="bold"
                      android:layout_gravity="center_horizontal"
                      android:layout_marginTop="30dp"/>

            <EditText
                    android:id="@+id/authenticate_login_edit_text"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/student_number"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"/>
            <EditText
                    android:id="@+id/authenticate_password_edit_text"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"/>
            <Button android:background="@drawable/button_style"
                    android:text="@string/action_sign_in_short"
                    android:id="@+id/SignIn_btn"
                    android:textColor="@color/grayLight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"/>
            <TextView
                    android:text="@string/register"
                    android:id="@+id/text_or_register_now"
                    android:layout_marginTop="40dp"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>