<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:background="@color/azure"
        android:gravity="center_horizontal"
        tools:context=".startPage.student_page.pass_test_page.PassTestActivity">
    <TextView
            android:id="@+id/pass_test_activity_Title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:text="Activity pass text"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
    />
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:cardCornerRadius="30dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/pass_test_activity_question_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="suroo"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
            />
            <RadioGroup
                    android:id="@+id/pass_test_activity_radio_group_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp">
                <RadioButton
                        android:id="@+id/pass_test_activity_optionA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="optionA"
                /><RadioButton
                    android:id="@+id/pass_test_activity_optionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="optionB"
            /><RadioButton
                    android:id="@+id/pass_test_activity_optionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="optionC"
            /><RadioButton
                    android:id="@+id/pass_test_activity_optionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="optionD"
            />
            </RadioGroup>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3"
            >
                <Button
                        android:id="@+id/pass_test_activity_count_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        android:visibility="invisible"
                        android:text="@string/pass_test_activity_count_text"
                />
                <Button
                        android:id="@+id/pass_test_activity_prev_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        android:visibility="invisible"
                        android:text="@string/pass_test_activity_prev_text"
                />
                <Button
                        android:id="@+id/pass_test_activity_next_btn"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_style"
                        android:layout_weight="1"
                        android:visibility="invisible"
                        android:text="@string/pass_test_activity_next_text"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>